CS_PROD_20150209_01/Metadata/unpackaged/objects/International_Print_Quote__c.object
<CustomObject>
    <fields>
        <fullName>CisionPoint_ID__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>CisionPoint ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_s__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Country(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_End_Date__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coverage_Start_Date__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keyword_Specs_per_Subscription__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Keyword Specs per Subscription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Media_Source__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Media Source</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>International Print Quotes</relationshipLabel>
        <relationshipName>International_Print_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Quote Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_of_Subscriptions__c</fullName>
        <description>Created by LM on 3/14/2014 for Phase2</description>
        <label>Volume of Subscriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>International Print Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IPQN-{0000}</displayFormat>
        <label>International Print Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>International Print Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>